@@ -1,5 +1,6 @@
 software-center (1.1.11) UNRELEASED; urgency=low
 
+  [ Michael Vogt ]
   * make action buttons in the appview insensitive while a action
     is in progress
   * added po/th.po:
@@ -8,7 +9,12 @@ software-center (1.1.11) UNRELEASED; urgency=low
     "No screenshot available" text translatable, thanks to
     Tomeu Vizoso
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 28 Jan 2010 09:43:41 +0100
+  [ Gary Lasker ]
+  * softwarecenter/view/viewswitcher.py:
+    - add support for using the up/down arrow keys to select
+      items in the navigation pane (LP: #517271)
+
+ -- Gary Lasker <gary.lasker@canonical.com>  Thu, 04 Feb 2010 14:00:24 -0800
 
 software-center (1.1.10) lucid; urgency=low
 
